syntax = "proto3";

package log;

service LogRequest {
  rpc Create (FornecedorRequest) returns (StatusResponse);
}

// The request message containing the user's name.
message FornecedorRequest {
  string requestId = 1;
  string payloadApi = 2;
  string requestForncedor = 3;
  string responseForncedor = 4;
}

message StatusResponse {
  string message = 1;
}
